# keyboardSound

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
example/: mapping.txt
